feat: 구매, 판매 기록